# UniversalGraphicWindow

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  api_d3d11.cpp  api_d3d12.cpp  api_metal.mm  api_opengl.cpp  api_opengl_cocoa.mm  api_opengl_egl.cpp  api_opengl_glx.cpp  api_vulkan.cpp  game_config.ini  glad.c  graphics_api.hpp  math_util.hpp  multi_window_config.ini  window.hpp  window_android.cpp  window_ios.mm  window_macos.mm  window_uwp.cpp  window_wayland.cpp  window_win32.cpp  window_x11.cpp
.claude/: ralph-loop.local.md  settings.json
api/: api_d3d11.cpp  api_d3d12.cpp  api_interface.cpp  api_metal.mm  api_opengl.cpp  api_opengl_cocoa.mm  api_opengl_egl.cpp  api_opengl_glx.cpp  api_opengl_wasm.cpp  api_render.cpp  api_render_d3d11.cpp  api_render_d3d12.cpp  api_render_internal.hpp  api_render_metal.mm  api_render_opengl.cpp  api_render_vulkan.cpp  api_texture_format.cpp  api_vulkan.cpp  glad.h  graphics_config.cpp  opengl_caps.inl
audio/: audio.cpp  audio.hpp  audio_coreaudio.mm  audio_openal.cpp  audio_pulseaudio.cpp  audio_wasapi.cpp
cmake/: windowConfig.cmake.in
device/: device_android.cpp  device_apple.mm  device_linux.cpp  device_uwp.cpp  device_wasm.cpp  device_win32.cpp
doc/: README.md  audio.md  config-files.md  getting-started.md  graphics.md  gui.md  input.md  window.md
examples/: assets.cpp  audio.cpp  basic.cpp  buffer.cpp  css_theme.cpp  d3d11.cpp  d3d12.cpp  dialogs.cpp  events.cpp  external_window.cpp  font.cpp  gamepad.cpp  graphics_config.cpp  gui.cpp  gui_renderer.cpp  gui_serialization.cpp  light.cpp  material_resources.cpp  metal.mm  opengl.cpp  pbr.cpp  present.cpp  present_modes.cpp  render_pipeline.cpp  render_pipeline_d3d_dxbc.h  render_pipeline_vk_spv.h  shader_compiler.cpp  slot_binding.cpp  space_partition.cpp  vector_renderer.cpp  video.cpp  virtual_keyboard.cpp  vulkan.cpp  wheel.cpp
gui/: gui.cpp  gui.hpp  gui_animation.cpp  gui_animation.hpp  gui_context.cpp  gui_context.hpp  gui_controls.cpp  gui_controls.hpp  gui_dialog.cpp  gui_dialog.hpp  gui_label.cpp  gui_label.hpp  gui_list.cpp  gui_list.hpp  gui_menu.cpp  gui_menu.hpp  gui_page.cpp  gui_page.hpp  gui_panel.cpp  gui_panel.hpp  gui_property.cpp  gui_property.hpp  gui_renderer.cpp  gui_renderer.hpp  gui_scroll.cpp  gui_scroll.hpp  gui_serialization.cpp  gui_serialization.hpp  gui_sizer.cpp  gui_sizer.hpp  gui_tab.cpp  gui_tab.hpp  gui_text_rasterizer.cpp  gui_text_rasterizer.hpp  gui_toolbar.cpp  gui_toolbar.hpp  gui_tree.cpp  gui_tree.hpp  gui_widget_base.hpp
gui/editor/: CMakeLists.txt  editor.cpp  editor.hpp  editor_canvas.cpp  editor_canvas.hpp  editor_commands.cpp  editor_commands.hpp  editor_inspector.cpp  editor_inspector.hpp  editor_palette.cpp  editor_palette.hpp  main.cpp
gui/font/: font.cpp  font.hpp  font_apple.mm  font_freetype.cpp  font_harfbuzz.cpp  font_linux.cpp  font_win32.cpp
gui/vk/: virtual_keyboard.cpp  virtual_keyboard.hpp  virtual_keyboard_android.cpp  virtual_keyboard_apple.mm  virtual_keyboard_linux.cpp  virtual_keyboard_stub.cpp  virtual_keyboard_win32.cpp
input/: gamepad_android.cpp  gamepad_dinput.cpp  gamepad_evdev.cpp  gamepad_gccontroller.mm  gamepad_wasm.cpp  gamepad_xinput.cpp  input_gamepad.cpp  input_gamepad.hpp  input_keyboard.cpp  input_keyboard.hpp  input_mouse.cpp  input_mouse.hpp  input_wheel.cpp  input_wheel.hpp  wheel_android.cpp  wheel_dinput.cpp  wheel_evdev.cpp  wheel_gccontroller.mm  wheel_wasm.cpp
internal/: utf8_util.hpp
renderer/: gui_renderer.cpp  gui_renderer.hpp  gui_text_rasterizer.cpp  gui_text_rasterizer.hpp  gui_vk_atlas_frag.spv.h  gui_vk_image_frag.spv.h  gui_vk_vert.spv.h  material.cpp  material.hpp  vector_renderer.cpp  vector_renderer.hpp
renderer/assets/: asset_manager.cpp  asset_manager.hpp  detex_compat.h  image.cpp  image.hpp  mesh.cpp  mesh.hpp  model.cpp  model.hpp
renderer/buffer/: gpu_buffer.cpp  gpu_buffer.hpp  gpu_texture.cpp  gpu_texture.hpp
renderer/css/: css_theme.cpp
renderer/light/: light.cpp  light.hpp
renderer/shader_compiler/: shader_compiler.cpp  shader_compiler.hpp
renderer/shaders/: lights.hlsli  pbr.hlsl  pbr.material  quad.hlsl  quad.material  quad.ps_main.spv  quad.vs_main.spv
renderer/space_partition/: bsp.cpp  bsp.hpp  bvh.cpp  bvh.hpp  gpu_lbvh.cpp  gpu_lbvh.hpp  gpu_leaf_cull.cpp  gpu_leaf_cull.hpp  gpu_uniform_grid.cpp  gpu_uniform_grid.hpp  octree.cpp  octree.hpp  quadtree.cpp  quadtree.hpp  space_partition.cpp  space_partition.hpp  uniform_grid.cpp  uniform_grid.hpp
renderer/style/: aiwrapper_theme.hpp  css_theme.hpp
renderer/video/: video_renderer.cpp  video_renderer.hpp
setup/: wizard.ps1  wizard.sh
setup/templates/: CMakeLists.txt.in  main.cpp.in
tests/: test_assets.cpp  test_font.cpp  test_glyph_atlas.cpp  test_gui.cpp  test_space_partition.cpp  test_video.cpp  test_window.cpp
tools/: shader_compiler_cli.cpp
window/: ibus_client.cpp  ibus_client.hpp  window.cpp  window_android.cpp  window_ios.mm  window_macos.mm  window_uwp.cpp  window_wasm.cpp  window_wayland.cpp  window_win32.cpp  window_x11.cpp
